--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="sv">
 <head>
   <meta charset="UTF-8">
-  <title>Min Första GitHub Page</title>
+  <title>TEST</title>
   <style>
     body {
       font-family: Arial, sans-serif;
