--- a/services.html
+++ b/services.html
@@ -58,10 +58,10 @@
         För att avlasta driftorganisationen kan Q-Core driftas i en svensk serverhall med redundanta system för ström, kyla och nätverk. Hostingtjänsten inkluderar övervakning av tillgänglighet, säkerhetskopiering av data samt hantering av uppgraderingar.
       </p>
       <p class="mt-2 text-slate-700">
-        Backuprutinerna är uppsatta med daglig kopiering och regelbunden verifiering. Vid en incident kan data återställas till en viss tidpunkt. Uppgraderingar av plattformen sker planerat och testas i en stagingmiljö innan de läggs in i produktionsmiljön.
+        Backuprutinerna är uppsatta med daglig kopiering och regelbunden verifiering. Vid en incident kan data återställas till en viss tidpunkt. Uppgraderingar av plattformen sker planerat och testas i en stagingmiljö innan de läggs in i produktionsmiljön. På så sätt kan nya funktioner införas utan att driften riskeras.
       </p>
       <div class="mt-4 p-4 bg-indigo-50 rounded-2xl text-slate-700 text-sm">
-        <strong>Exempel:</strong> Ett fastighetsbolag med begränsad intern IT-avdelning väljer hosting för att slippa bygga egen servermiljö.
+        <strong>Exempel:</strong> Ett fastighetsbolag med begränsad intern IT-avdelning väljer hosting för att slippa bygga egen servermiljö. När nya versioner av Q-Core släpps sker uppgraderingen centralt, vilket innebär att driftorganisationen alltid arbetar i den senaste och mest säkra miljön utan eget ansvar för patchning.
       </div>
     </section>
 
