Paket prisexempel hover

--- a/index.html
+++ b/index.html
@@ -115,43 +115,48 @@
       </div>
     </section>
 
-    <!-- Paket & prisexempel -->
-    <section id="priser" class="py-12 border-t bg-white">
-      <div class="mx-auto max-w-7xl px-4">
-        <h2 class="text-3xl font-bold tracking-tight text-indigo-700">
-          Paket & prisexempel
-        </h2>
-        <div class="mt-8 grid md:grid-cols-3 gap-6">
-          <div class="rounded-3xl border p-6 shadow-sm">
-            <h3 class="text-xl font-semibold text-indigo-700">Bas</h3>
-            <ul class="mt-4 space-y-2 text-sm">
-              <li>• Q-Core per fastighet</li>
-              <li>• Hosting i svensk hall</li>
-              <li>• API-åtkomst</li>
-              <li>• SCADA-koppling (tillägg)</li>
-            </ul>
-          </div>
-          <div class="rounded-3xl border p-6 shadow-sm ring-2 ring-violet-500">
-            <h3 class="text-xl font-semibold text-indigo-700">Pro</h3>
-            <ul class="mt-4 space-y-2 text-sm">
-              <li>• Allt i Bas</li>
-              <li>• Semantisk modell</li>
-              <li>• Q-Energival</li>
-              <li>• Systemförvaltning 1 dag/mån</li>
-            </ul>
-          </div>
-          <div class="rounded-3xl border p-6 shadow-sm">
-            <h3 class="text-xl font-semibold text-indigo-700">Enterprise</h3>
-            <ul class="mt-4 space-y-2 text-sm">
-              <li>• Allt i Pro</li>
-              <li>• AI Analys 1.0</li>
-              <li>• SLA 24/7</li>
-              <li>• Kundspecifika integrationer</li>
-            </ul>
-          </div>
-        </div>
+    <!-- Paket & prisexempel --> 
+<section id="priser" class="py-12 border-t bg-white">
+  <div class="mx-auto max-w-7xl px-4">
+    <h2 class="text-3xl font-bold tracking-tight text-indigo-700">
+      Paket & prisexempel
+    </h2>
+
+    <div class="mt-8 grid md:grid-cols-3 gap-6">
+
+      <div class="rounded-3xl border p-6 shadow-sm transition hover:shadow-md hover:-translate-y-1 hover:border-indigo-500 hover:ring-2 hover:ring-indigo-500">
+        <h3 class="text-xl font-semibold text-indigo-700">Bas</h3>
+        <ul class="mt-4 space-y-2 text-sm">
+          <li>• Q-Core per fastighet</li>
+          <li>• Hosting i svensk hall</li>
+          <li>• API-åtkomst</li>
+          <li>• SCADA-koppling (tillägg)</li>
+        </ul>
       </div>
-    </section>
+
+      <div class="rounded-3xl border p-6 shadow-sm transition hover:shadow-md hover:-translate-y-1 hover:border-indigo-500 hover:ring-2 hover:ring-indigo-500">
+        <h3 class="text-xl font-semibold text-indigo-700">Pro</h3>
+        <ul class="mt-4 space-y-2 text-sm">
+          <li>• Allt i Bas</li>
+          <li>• Semantisk modell</li>
+          <li>• Q-Energival</li>
+          <li>• Systemförvaltning 1 dag/mån</li>
+        </ul>
+      </div>
+
+      <div class="rounded-3xl border p-6 shadow-sm transition hover:shadow-md hover:-translate-y-1 hover:border-indigo-500 hover:ring-2 hover:ring-indigo-500">
+        <h3 class="text-xl font-semibold text-indigo-700">Enterprise</h3>
+        <ul class="mt-4 space-y-2 text-sm">
+          <li>• Allt i Pro</li>
+          <li>• AI Analys 1.0</li>
+          <li>• SLA 24/7</li>
+          <li>• Kundspecifika integrationer</li>
+        </ul>
+      </div>
+
+    </div>
+  </div>
+</section>
 
     <!-- Kalkylator -->
     <section
