--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
     <h2 class="text-3xl font-bold text-indigo-700">Kontakta oss</h2>
 
     <form id="contactForm"
-          action="https://formspree.io/f/mandngqk"
+          action="https://formspree.io/f/xpwjwnbe"
           method="POST"
           class="mt-6 space-y-4">
 
@@ -273,7 +273,7 @@
         <div>
           <label class="block text-sm font-medium">Namn</label>
           <input name="name" required class="mt-1 w-full rounded-xl border px-3 py-2" />
-        </div>0+
+        </div>
         <div>
           <label class="block text-sm font-medium">E-post</label>
           <input name="email" type="email" required class="mt-1 w-full rounded-xl border px-3 py-2" />
@@ -608,5 +608,7 @@
     </script>
   </body>
 </html>
+
+
 
 
