--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
     <h2 class="text-3xl font-bold text-indigo-700">Kontakta oss</h2>
 
     <form id="contactForm"
-          action="https://formspree.io/f/xpwjwnbe"
+          action="https://formspree.io/f/mandngqk"
           method="POST"
           class="mt-6 space-y-4">
 
