--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
           <a href="#priser" class="hover:opacity-80">Priser</a>
           <a href="#kalkyl" class="hover:opacity-80">Kalkylator</a>
           <a href="#kontakt" class="hover:opacity-80">Kontakt</a>
+           <a href="whitepaper.html" class="hover:opacity-80 font-semibold underline">White paper</a>
         </nav>
         <a
           href="#kontakt"
