--- a/services.html
+++ b/services.html
@@ -21,6 +21,7 @@
         <a href="index.html#priser" class="hover:opacity-80">Priser</a>
         <a href="index.html#kalkyl" class="hover:opacity-80">Kalkylator</a>
         <a href="index.html#kontakt" class="hover:opacity-80">Kontakt</a>
+        <a href="whitepaper.html" class="hover:opacity-80 font-semibold underline">White paper</a>
       </nav>
       <a href="index.html#kontakt" class="inline-flex items-center gap-2 rounded-2xl bg-white px-4 py-2 text-indigo-700 text-sm shadow-sm hover:bg-indigo-100">
         Boka demo
