--- a/services.html
+++ b/services.html
@@ -17,11 +17,11 @@
       </div>
       <nav class="hidden md:flex items-center gap-6 text-sm">
         <a href="index.html" class="hover:opacity-80">Hem</a>
-        <a href="services.html" aria-current="page" class="hover:opacity-80 font-semibold underline">Tjänster</a>
+        <a href="services.html" aria-current="page" class="hover:opacity-80">Tjänster</a>
         <a href="index.html#priser" class="hover:opacity-80">Priser</a>
         <a href="index.html#kalkyl" class="hover:opacity-80">Kalkylator</a>
         <a href="index.html#kontakt" class="hover:opacity-80">Kontakt</a>
-        <a href="whitepaper.html" class="hover:opacity-80 font-semibold underline">White paper</a>
+        <a href="whitepaper.html" class="hover:opacity-80">White paper</a>
       </nav>
       <a href="index.html#kontakt" class="inline-flex items-center gap-2 rounded-2xl bg-white px-4 py-2 text-indigo-700 text-sm shadow-sm hover:bg-indigo-100">
         Boka demo
