--- a/whitepaper.html
+++ b/whitepaper.html
@@ -21,7 +21,7 @@
         <a href="index.html#priser" class="hover:opacity-80">Priser</a>
         <a href="index.html#kalkyl" class="hover:opacity-80">Kalkylator</a>
         <a href="index.html#kontakt" class="hover:opacity-80">Kontakt</a>
-        <a href="whitepaper.html" aria-current="page" class="hover:opacity-80 font-semibold underline">White paper</a>
+        <a href="whitepaper.html" aria-current="page" class="hover:opacity-80">White paper</a>
       </nav>
       <a href="index.html#kontakt" class="inline-flex items-center gap-2 rounded-2xl bg-white px-4 py-2 text-indigo-700 text-sm shadow-sm hover:bg-indigo-100">
         Boka demo
@@ -37,12 +37,12 @@
 
       <div class="mt-6 flex flex-wrap gap-3">
         <!-- Ladda ner (same-origin → funkar på GitHub Pages) -->
-        <a href="assets/Q-Core-Whitepaper.pdf" download="Q-Core-Whitepaper.pdf"
+        <a href="assets/Q-Core_Whitepaper.pdf" download="Q-Core-Whitepaper.pdf"
            class="inline-flex items-center rounded-2xl bg-white px-5 py-2.5 text-indigo-700 hover:bg-indigo-100">
           Ladda ner PDF
         </a>
         <!-- Öppna i ny flik -->
-        <a href="assets/Q-Core-Whitepaper.pdf" target="_blank" rel="noopener"
+        <a href="assets/Q-Core_Whitepaper.pdf" target="_blank" rel="noopener"
            class="inline-flex items-center rounded-2xl bg-indigo-50/20 px-5 py-2.5 text-white ring-1 ring-white/40 hover:bg-indigo-50/30">
           Öppna i ny flik
         </a>
