--- a/whitepaper.html
+++ b/whitepaper.html
@@ -56,7 +56,8 @@
       <div class="rounded-2xl border overflow-hidden bg-slate-50">
         <!-- Enkel, responsiv viewer -->
         <iframe
-          src="assets/Q-Core-Whitepaper.pdf#view=FitH"
+          src="assets/Q-Core_
+          Whitepaper.pdf#view=FitH"
           class="w-full h-[80vh]"
           loading="lazy">
         </iframe>
