--- a/whitepaper.html
+++ b/whitepaper.html
@@ -56,11 +56,10 @@
       <div class="rounded-2xl border overflow-hidden bg-slate-50">
         <!-- Enkel, responsiv viewer -->
         <iframe
-          src="assets/Q-Core_
-          Whitepaper.pdf#view=FitH"
-          class="w-full h-[80vh]"
-          loading="lazy">
-        </iframe>
+        src="/assets/Q-Core_Whitepaper.pdf#view=FitH"
+        class="w-full h-[80vh]"
+        loading="lazy">
+      </iframe>
       </div>
       <p class="mt-3 text-sm text-slate-600">
         Om PDF:en inte visas i din webbläsare, använd knappen “Öppna i ny flik” ovan.
