Ändrat utforska tjänster knappen

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             >
             <a
               href="services.html"
-              class="rounded-2xl border border-white px-5 py-3 shadow-sm hover:bg-white hover:text-indigo-700"
+              class="rounded-2xl bg-white px-5 py-3 text-indigo-700 font-semibold shadow hover:bg-slate-100"
               >Utforska tjänster</a
             >
           </div>
