--- a/index.html
+++ b/index.html
@@ -357,20 +357,29 @@
 </script>
 
     <!-- Footer -->
-    <footer class="py-10 border-t bg-indigo-700 text-white">
-      <div
-        class="mx-auto max-w-7xl px-4 flex flex-col md:flex-row items-center justify-between gap-4 text-sm"
-      >
-        <div>
-          © <span id="year"></span> Q-Core / INIT – Alla rättigheter förbehålls.
-        </div>
-        <div class="flex items-center gap-4">
-          <a href="#" class="hover:underline">Integritet</a>
-          <a href="#" class="hover:underline">Säkerhet</a>
-          <a href="#" class="hover:underline">Status</a>
-        </div>
-      </div>
-    </footer>
+<footer class="py-10 border-t bg-indigo-700 text-white">
+  <div class="mx-auto max-w-7xl px-4 flex flex-col md:flex-row items-center justify-between gap-4 text-sm">
+    <div>
+      © <span id="year"></span> Q-Core / INIT – Alla rättigheter förbehålls.
+    </div>
+
+    <div class="flex items-center gap-4">
+      <a href="#" class="hover:underline">Integritet</a>
+      <a href="#" class="hover:underline">Säkerhet</a>
+      <a href="#" class="hover:underline">Status</a>
+
+      <!-- LinkedIn-knapp -->
+      <a href="https://www.linkedin.com/company/init/posts/?feedView=all" target="_blank" rel="noopener"
+         aria-label="Följ oss på LinkedIn"
+         class="inline-flex h-9 w-9 items-center justify-center rounded-full
+                bg-white/10 ring-1 ring-white/30 hover:bg-white/20">
+        <svg viewBox="0 0 24 24" class="h-5 w-5 text-white" fill="currentColor" aria-hidden="true">
+          <path d="M22.225 0H1.771C.792 0 0 .771 0 1.726v20.549C0 23.229.792 24 1.771 24h20.451C23.2 24 24 23.229 24 22.274V1.726C24 .771 23.2 0 22.222 0zM6.93 20.452H3.743V9H6.93v11.452zM5.337 7.433a2.062 2.062 0 1 1 0-4.125 2.062 2.062 0 0 1 0 4.125zM20.447 20.452h-3.554v-5.569c0-1.328-.027-3.037-1.852-3.037-1.853 0-2.136 1.445-2.136 2.939v5.667H9.35V9h3.414v1.561h.049c.476-.9 1.637-1.852 3.37-1.852 3.605 0 4.27 2.372 4.27 5.455v6.288z"/>
+        </svg>
+      </a>
+    </div>
+  </div>
+</footer>
 
     <!-- Data + rendering (vanilla JS) -->
     <script>
