Fixat statiskt bild init samt länken

--- a/index.html
+++ b/index.html
@@ -369,7 +369,7 @@
   <a href="#" class="hover:underline">Status</a>
 
   <!-- Init-knapp -->
-  <a href="https://www.init.se" target="_blank" rel="noopener"
+  <a href="https://initgroup.com/se/" target="_blank" rel="noopener"
      class="inline-flex h-9 w-9 items-center justify-center rounded-full bg-white ring-1 ring-white/30 hover:opacity-90"
      aria-label="Besök Init Sweden AB">
     <img src="/assets/init-logo.png" alt="Init Sweden AB" class="h-5 w-5 object-contain" />
