--- a/whitepaper.html
+++ b/whitepaper.html
@@ -43,7 +43,7 @@
         </a>
         <!-- Öppna i ny flik -->
         <a href="assets/Q-Core_Whitepaper.pdf" target="_blank" rel="noopener"
-           class="inline-flex items-center rounded-2xl bg-indigo-50/20 px-5 py-2.5 text-white ring-1 ring-white/40 hover:bg-indigo-50/30">
+           class="inline-flex items-center rounded-2xl bg-white px-5 py-2.5 text-indigo-700 hover:bg-indigo-100">
           Öppna i ny flik
         </a>
       </div>
